# pyna

./: .buildinfo  .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIELD_LINE_TRACING_POLICY.md  FINITE_BETA_GUIDE.md  MANIFEST.in  README.md  REFACTOR_TASK.md  STYLE.md  _append_coil.py  _c.py  _check.py  _chk.py  _exec_v5.txt  _find_xpt.py  _fix_body.py  _fix_loop.py  _fix_loop2.py  _fix_orphan.py  _fix_sig.py  _gen_sn_cache.py  _island_exec.txt  _island_timing.txt  _island_timing2.txt  _island_timing3.txt  _island_timing4.txt  _migrate_healed_flux_coords.py  _out_cell23.txt  _patch11.py  _patch_cell12.py  _patch_cell6.py  _patch_healed_init.py  _patch_healed_orbits.py  _patch_notebook.py  _patch_topo_init.py  (+72 more)
.github/workflows/: docs.yml  notebook-tests.yml  release-please.yml  release.yml  sphinx_to_github.yml  sphinx_to_github.yml.backup  wheels.yml
_modules/: EBField.html  LoopBetweenCapacitor.html  electromagnetics.html  index.html  motion.html
_modules/matplotlib/: pickpoints.html
_modules/pyna/: _cyna.html  cache.html  connection_length.html  context.html  dynamics.html  flow.html  flt.html  flt_cuda.html  imas_compat.html  map.html  polymap.html  polynomial.html  progress.html  system.html  sysutil.html  topo.html  trace_dataset.html  vector_calc.html  withparam.html
_static/: custom.css  documentation_options.js  language-switcher.js
_static/scripts/: bootstrap.js  fontawesome.js  pydata-sphinx-theme.js
_static/styles/: pydata-sphinx-theme.css
cyna/: README.md  coil_field_cuda.cu  flt_bindings.exp  flt_bindings.lib  xmake.lua
cyna/app/: construct_flux_coordinate.cpp  flt3d.cpp
cyna/bindings/: flt_bindings.cpp
cyna/include/: BS_thread_pool.hpp
cyna/tests/: test_flt.cpp
de/: index.html  installation.html  mini-cases.html  quickstart.html
de/api/: control.html  cyna.html  dynamics-patterns.html  dynamics.html  flt.html  index.html  topo.html  toroidal.html
de/development/: architecture.html  (+2 more)
docs/: Makefile  conf.py  healed_scaffold_3d_plan.md  index.rst  make.bat  stellarator_beta_climb_notes.md
en/: index.html  installation.html  mini-cases.html  quickstart.html
fr/: index.html  installation.html  mini-cases.html  quickstart.html
ja/: index.html  installation.html  mini-cases.html  quickstart.html
ko/: index.html  installation.html  mini-cases.html  quickstart.html
notebooks/: Check_noncommutative_algebra_derivative.ipynb  DX_to_DP.ipynb  Lorenz_attractor.ipynb  Mobius.ipynb  Mobiusian_saddle_cycle.ipynb  Poly2d_test.ipynb  Untitled.ipynb  double_pendulum.py  dummy_Xcycle.ipynb  high_order_partial_derivatives_of_Poincare_Map.ipynb  high_order_partial_derivatives_of_Poincare_Map_NotPackaged.ipynb  pick_points_on_poloidal_cross_section.ipynb  polynomial.ipynb  shear_map.ipynb  validate_chaos.ipynb  verify_guiding_center.ipynb  verytemp.ipynb  未命名.ipynb  未命名2.ipynb
pyna/: __init__.py  cache.py  connection_length.py  context.py  dynamics.py  field.py  field_data.py  flow.py  flt.py  flt_cuda.py  imas_compat.py  mag.py  map.py  polymap.py  polynomial.py  progress.py  system.py  sysutil.py  trace_dataset.py  vector_calc.py  withparam.py
pyna_output/: poincare_data.json  suppression_report.json
ru/: index.html  installation.html  mini-cases.html  quickstart.html
scripts/: RMP_poincare_fast.py  RMP_poincare_fast2.py  RMP_stellarator_resonance.py  RMP_tokamak_resonance.py  _check.py  _check_all_coils.py  _check_coil_currents.py  _check_npz.py  _check_resp_scale.py  _check_vacuum_field.py  _debug_coupled.py  _find_j0.py  _find_order.py  _findden.py  _fix_j0.py  _fix_test.py  _fixden.py  _patch_fenicsx.py  _patch_fenicsx2.py  _quick_check.py  _reorder.py  _test_beta_avg.py  benchmark_flt.py  benchmark_results.txt  cache_benchmark.py  cache_benchmark_results.txt  check_docs_artifacts.py  check_docs_notebooks.py  check_manifold_cell.py  check_privacy_terms.py  diag_manifold_solovev_RMP.py  diagnose_perturbgs.py  find_xpoints.py  fix_all_deprecated.py  fix_manifold_deprecated.py  fpt_xo_shift_validation.py  hao_beta_climb.py  hao_beta_poincare.py  ncsx_magnetic_spectrum_case.py  ncsx_redo_pest_boozer_coords.py  (+34 more)
tests/: __init__.py  _tmp_analysis.py  _tmp_bnf_final.py  _tmp_bnf_test.py  _tmp_correct_formula.py  _tmp_deriv_check.py  _tmp_dtheta_check.py  _tmp_f13_diag.py  _tmp_f13_torus_mean.py  _tmp_factor2.py  _tmp_ham_divB.py  _tmp_hamiltonian_test.py  _tmp_nodes.py  _tmp_nodes_clean.py  _tmp_single_mode.py  conftest.py  convergence_torus_deformation.py  convergence_torus_full.py  test_FPT_3d.py  test_PEST.py  test_beta_ramp_plot.py  test_beta_ramp_workflow.py  test_boundary_field_basis.py  test_boundary_island_chain.py  test_boundary_local_coils.py  test_boundary_nonlinear_validation.py  test_boundary_optimization_workflow.py  test_boundary_perturbation_candidates.py  test_boundary_plasma_response.py  test_boundary_section_multiwrap_guard.py  test_boundary_topology_cases.py  test_boundary_topology_control.py  test_boundary_topology_design.py  test_boundary_topology_visual.py  test_cache.py  test_candidate_field_pest_reparameterization.py  test_cartesian_tracing.py  test_classical_maps.py  test_coil_system.py  test_connection_length.py  (+109 more)
zh/: index.html  installation.html  mini-cases.html  quickstart.html  straight_theta_surface_coordinates.html
(+846 files in other folders)
