[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyna-chaos"
version = "0.7.1"
description = "Python library for dynamical systems and magnetic confinement fusion analysis"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Wenyin Wei", email = "wenyin.wei.ww@gmail.com"}]
requires-python = ">=3.9"
keywords = ["dynamical systems", "chaos", "plasma physics", "MHD", "Poincaré map", "magnetic confinement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "sympy>=1.10",
    "deprecated>=1.2",
    "h5py>=3.0",
]

[project.optional-dependencies]
cuda = ["cupy-cuda12x"]
dev = ["pytest", "jupyter", "notebook", "tqdm"]
progress = ["tqdm>=4.60"]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-autoapi",
    "ipykernel",
    "scikit-image",
    "joblib",
    "deprecated",
    "pandas",
    "pytest-timeout",
    "nbmake",
]

[project.urls]
Homepage = "https://github.com/WenyinWei/pyna"
Repository = "https://github.com/WenyinWei/pyna"
Issues = "https://github.com/WenyinWei/pyna/issues"

[tool.setuptools.packages.find]
include = ["pyna*", "cyna*"]
exclude = ["notebooks*"]

# Include compiled extension binaries in the wheel.
# Without this, setuptools only packs .py files and the .pyd/.so would be missing.
[tool.setuptools.package-data]
"pyna._cyna" = ["*.pyd", "*.so", "*.so.*"]

# Tell pip/wheel this package contains compiled extensions
# so it builds a platform-specific wheel (not a universal py3-none-any).
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["*-win32", "*-musllinux_i686"]
before-build = "pip install pybind11"
test-command = "python -c \"import pyna._cyna as c; assert c.is_available()\""

[tool.pytest.ini_options]
testpaths = ["tests"]
